--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,11 +1,11 @@
 stages:
   make-field-files:
     foreach:
-      ${strands}
+      ${submission}
     do:
       cmd: swg-workflow/make_field_files.py ${key}
       params:
-        - strands.${key}.footprint
+        - submission.${key}.footprint
       deps:
         - ${item.footprint.footprint_file}
         - swg-workflow/make_field_files.py
@@ -13,7 +13,7 @@ stages:
         - ${item.field_file}
   create-empty-xmls:
     foreach:
-      ${strands}
+      ${submission}
     do:
       cmd: weaveworkflow/mos/workflow/mos_stage2/create_xml_files.py ${item.field_file} --outdir obs/${key}/01-empty
       deps:
@@ -25,16 +25,16 @@ stages:
     foreach:
       ${catalogues}
     do:
-      cmd: weaveworkflow/mos/workflow/mos_stage3/add_targets_to_xmls.py --outdir obs/${item.strand}/02-targets ${item.catalogue} obs/${item.strand}/01-empty/*
+      cmd: weaveworkflow/mos/workflow/mos_stage3/add_targets_to_xmls.py --outdir obs/${item.submission}/${item.output} ${item.catalogue} obs/${item.submission}/${item.input}/*
       deps:
-        - obs/${item.strand}/01-empty
+        - obs/${item.submission}/${item.input}
         - ${item.catalogue}
         - weaveworkflow/mos/workflow/mos_stage3/add_targets_to_xmls.py
       outs:
-        - obs/${item.strand}/02-targets
+        - obs/${item.submission}/${item.output}
   clean-xmls:
     foreach:
-      ${strands}
+      ${submission}
     do:
       cmd: swg-workflow/clean_xml_targets.py --outdir obs/${key}/03-cleaned obs/${key}/02-targets/*
       deps:
@@ -44,7 +44,7 @@ stages:
         - obs/${key}/03-cleaned
   add-guide-and-calib-stars:
     foreach:
-      ${strands}
+      ${submission}
     do:
       cmd: weaveworkflow/mos/workflow/mos_stage4/add_guide_and_calib_stars.py --outdir obs/${key}/04-guide-and-calib-stars obs/${key}/03-cleaned/*
       deps:
