--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,5 @@
 field_template: 'weaveworkflow/mos/workflow/mos_stage1/aux/mos_field_template.fits'
-strands:
+submission:
   SV_exp1:
     footprint:
       footprint_file: 'data_repo/footprints/exp1_SV.fits'
@@ -63,13 +63,26 @@ strands:
 catalogues:
   SV_exp1:
     catalogue: 'catalogues/cat_exp1_SV.fits'
-    strand: 'SV_exp1'
+    submission: 'SV_exp1'
+    input: '01-empty'
+    output: '02-targets'
   SV_exp2:
     catalogue: 'catalogues/cat_exp2_SV.fits'
-    strand: 'SV_exp2'
-  shared:
-    catalogue: 'catalogues/cat_shared_2021A1.fits'
-    strand: 'shared'
+    submission: 'SV_exp2'
+    input: '01-empty'
+    output: '02-targets'
   pointed:
     catalogue: 'catalogues/cat_pointed_2021A1.fits'
-    strand: 'pointed'
+    submission: 'pointed'
+    input: '01-empty'
+    output: '02-targets'
+  shared:
+    catalogue: 'catalogues/cat_shared_2021A1.fits'
+    submission: 'shared'
+    input: '02-targets-WQ'
+    output: '02-targets'
+  WQ:
+    catalogue: 'catalogues/WQ_2021A2.fits'
+    submission: 'shared'
+    input: '01-empty'
+    output: '02-targets-WQ'
