First eDR3 configurations

--- a/catalogues/.gitignore
+++ b/catalogues/.gitignore
@@ -13,3 +13,11 @@
 /SV_exp2_DR3_dwarfonly-external-configured
 /SV_exp2_DR3_dwarfonly_downsample-configured
 /SV_exp2_DR3_dwarfonly_downsample-external-configured
+/SV_exp2_DR3_dwarfonly_onlyprio10-configured
+/SV_exp2_DR3_dwarfonly_onlyprio10-external-configured
+/SV_exp2_DR3_dwarfonly_onlyprio9-configured
+/SV_exp2_DR3_dwarfonly_onlyprio9-external-configured
+/SV_exp2_DR3_dwarfonly_onlyprio8-configured
+/SV_exp2_DR3_dwarfonly_onlyprio8-external-configured
+/SV_M92-external-configured
+/SV_M92-configured
