--- a/data_repo/external_cats/exp1_SV_DR3/.gitignore
+++ b/data_repo/external_cats/exp1_SV_DR3/.gitignore
@@ -1,1 +1,6 @@
 /HVS_201210.fits
+/RRLYRAE_210108.fits
+/STREAMSWIDE_210108.fits
+/SVexp1_EMP_210106.fits
+/BHB_EDR3_20210109.fits
+/BS_EDR3_20210109.fits
