Configuring SV Exp 1 after fixing rogue fieldname
Remove random OB gitignore

--- a/catalogues/.gitignore
+++ b/catalogues/.gitignore
@@ -21,3 +21,7 @@
 /SV_exp2_DR3_dwarfonly_onlyprio8-external-configured
 /SV_M92-external-configured
 /SV_M92-configured
+/SV_M92_outside-configured
+/SV_M92_outside-external-configured
+/SV_M92_center-configured
+/SV_M92_center-external-configured
