--- a/params.yaml
+++ b/params.yaml
@@ -14,7 +14,8 @@ submission:
         author: 'chriswegg@gmail.com'
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
-    configure_options: ''
+    configure_options: '""'
+    multistage: "-1"
     catalogue_dir: 'catalogues/SV_exp1'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/exp1_SV_DR3'
@@ -34,6 +35,7 @@ submission:
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
     configure_options: ''
+    multistage: "-1"
     catalogue_dir: 'catalogues/SV_M92_center'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/M92_center'
@@ -53,6 +55,7 @@ submission:
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
     configure_options: ''
+    multistage: "-1"
     catalogue_dir: 'catalogues/SV_M92_outside'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/M92_outside'
@@ -72,6 +75,7 @@ submission:
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
     configure_options: ''
+    multistage: "-1"
     catalogue_dir: 'catalogues/SV_exp2_DR3_dwarfonly'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/exp2_SV_DR3'
@@ -91,12 +95,13 @@ submission:
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
     configure_options: ''
+    multistage: "-1"
     catalogue_dir: 'catalogues/SV_exp2_DR3_dwarfonly_downsample'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/exp2_SV_DR3'
     internal_cats: 'data_repo/internal_cats/exp2_SV_DR3'
 
-  SV_exp2_DR3_dwarfsonly_onlyprio8:
+  SV_exp2_DR3_dwarfsonly_onlyprio8_lowt:
     footprint:
       footprint_file: 'data_repo/footprints/exp2_SV.fits'
       surveys:
@@ -109,7 +114,68 @@ submission:
         author: 'chriswegg@gmail.com'
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
-    configure_options: '"--stop_temp 0.1 --start_temp 50"'
+    configure_options: '"--stop_temp 0.0001 --start_temp 100"'
+    multistage: "-1"
+    catalogue_dir: 'catalogues/SV_exp2_DR3_dwarfonly_onlyprio8'
+    configure_epoch: '2021.5'
+    external_cats: 'data_repo/external_cats/exp2_SV_DR3'
+    internal_cats: 'data_repo/internal_cats/exp2_SV_DR3'
+
+  SV_exp2_DR3_dwarfsonly_onlyprio8_slow:
+    footprint:
+      footprint_file: 'data_repo/footprints/exp2_SV.fits'
+      surveys:
+        targsrvys: ['WS2021A1-029']
+        max_fibres: [1000]
+      progtemp: '11331.1+'
+      obstemp: 'DACEB'
+      keywords:
+        trimester: '2020A1'
+        author: 'chriswegg@gmail.com'
+        report_verbosity: 1
+        cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
+    configure_options: '"--stop_temp 0.1 --start_temp 200 --delta_temp 0.0002"'
+    multistage: "-1"
+    catalogue_dir: 'catalogues/SV_exp2_DR3_dwarfonly_onlyprio8'
+    configure_epoch: '2021.5'
+    external_cats: 'data_repo/external_cats/exp2_SV_DR3'
+    internal_cats: 'data_repo/internal_cats/exp2_SV_DR3'
+
+  SV_exp2_DR3_dwarfsonly_onlyprio8_multistage:
+    footprint:
+      footprint_file: 'data_repo/footprints/exp2_SV.fits'
+      surveys:
+        targsrvys: ['WS2021A1-029']
+        max_fibres: [1000]
+      progtemp: '11331.1+'
+      obstemp: 'DACEB'
+      keywords:
+        trimester: '2020A1'
+        author: 'chriswegg@gmail.com'
+        report_verbosity: 1
+        cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
+    configure_options: '""'
+    multistage: "4"
+    catalogue_dir: 'catalogues/SV_exp2_DR3_dwarfonly_onlyprio8'
+    configure_epoch: '2021.5'
+    external_cats: 'data_repo/external_cats/exp2_SV_DR3'
+    internal_cats: 'data_repo/internal_cats/exp2_SV_DR3'
+
+  SV_exp2_DR3_dwarfsonly_onlyprio8_default:
+    footprint:
+      footprint_file: 'data_repo/footprints/exp2_SV.fits'
+      surveys:
+        targsrvys: ['WS2021A1-029']
+        max_fibres: [1000]
+      progtemp: '11331.1+'
+      obstemp: 'DACEB'
+      keywords:
+        trimester: '2020A1'
+        author: 'chriswegg@gmail.com'
+        report_verbosity: 1
+        cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
+    configure_options: '""'
+    multistage: "-1"
     catalogue_dir: 'catalogues/SV_exp2_DR3_dwarfonly_onlyprio8'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/exp2_SV_DR3'
@@ -128,7 +194,8 @@ submission:
         author: 'chriswegg@gmail.com'
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
-    configure_options: ''
+    configure_options: '""'
+    multistage: "4"
     catalogue_dir: 'catalogues/SV_exp2_downsample0.5'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/exp2_SV'
@@ -149,6 +216,7 @@ submission:
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es'
     configure_options: ''
+    multistage: "-1"
     catalogue_dir: 'catalogues/pointed'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/pointed_2021A1'
@@ -169,6 +237,7 @@ submission:
         report_verbosity: 1
         cc_report: 'vanessa.hill@oca.eu, gbattaglia@iac.es, WL@weave, WQ@weave'
     configure_options: ''
+    multistage: "-1"
     catalogue_dir: 'catalogues/shared'
     configure_epoch: '2021.5'
     external_cats: 'data_repo/external_cats/shared_2021A1'
